--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div id="container">
+    </div>
 </body>
 <script type="text/javascript" src="./js/script.js"></script>
 </html>
