buton click to prompt size

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div id="container">
-    </div>
+    <button id="size">Size Prompt</button>
+    <div id="container"></div>
 </body>
 <script type="text/javascript" src="./js/script.js"></script>
 </html>
