added the heading

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <button id="size">Size Prompt</button>
-    <div id="container"></div>
+
+    <label class="head">Etch-Sketch</label>
+    <div class="main">
+        <button id="size">Size Prompt</button>
+        <div id="container"></div>
+    </div>
+    
 </body>
 <script type="text/javascript" src="./js/script.js"></script>
 </html>
