--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <label class="head">Etch-Sketch</label>
+    <h1 class="head">Etch-Sketch</h1>
     <div class="main">
         <button id="size">Size Prompt</button>
         <div id="container"></div>
