--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
     <h1 class="head">Etch-Sketch</h1>
     <div class="main">
-        <button id="size">Size Prompt</button>
+        <div>
+            <button id="size">Size Prompt</button>
+        </div>
+        
         <div id="container"></div>
     </div>
     
