Added the reset button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div class="main">
         <div>
             <button id="size">Size Prompt</button>
+            <button class="reset">
+                Reset
+              </button>
         </div>
         
         <div id="container"></div>
